# movies-ratier-app

./: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
api/: admin.py  models.py
api/migrations/: 0001_initial.py  0002_movie.py  0003_rating.py  0004_movie_poster.py
api/tests/: test_admin.py  test_models.py
app/: settings.py  urls.py
movie/: serializers.py  urls.py  views.py
user/: serializers.py  urls.py  views.py
user/tests/: test_user.py
