[tool.poetry]
name = "movies-ratier-app"
version = "0.1.0"
description = ""
authors = ["alpden550 <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
python-dotenv = "^0.13.0"
psycopg2-binary = "^2.8.5"
flake8 = "^3.8.1"
pillow = "^7.1.2"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
